<?xml version="1.0"?>
<package>
  <name>tiago_gesture</name>
  <description>Generate and Operate Gestures for the TIAGo Robot</description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <build_depend>sound_play</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
